# dbus-mcp

./: .gitignore  ARCHITECTURE-OVERVIEW.md  CLAUDE.md  CONCEPT.md  CONNECTION-ARCHITECTURE.md  DESIGN.md  LANGUAGE-EVALUATION.md  LICENSE  Makefile  README.md  SECURITY.md  SERVER-FLEET-CONCEPT.md  SYSTEM-PROFILES.md  TOOL-HIERARCHY.md  TOOL-PRESENTATION.md  USE-CASES-RANKED.md  install.sh  pyproject.toml  quickstart.sh  test_installation.py  uninstall.sh
config/: dbus-mcp.conf.example
docs/: QUICKSTART.md  README.md  ROADMAP.md
docs/architecture/: ARCHITECTURE-DECISIONS.md  ARCHITECTURE-OVERVIEW.md  CONNECTION-ARCHITECTURE.md  FILE-PIPE-MANAGER.md  PROJECT-STRUCTURE.md  SECURITY-CATEGORIES.md
docs/design/: SYSTEM-ROLES.md
docs/guides/: APPLICATION-SUPPORT.md  CONTEXT-EXAMPLES.md  DEPLOYMENT.md  DISCOVERED-CAPABILITIES.md  EXAMPLES.md  PRIVILEGE-MODEL.md  SCREENSHOT-AUTHORIZATION.md  SECURITY.md  SYSTEMD-MODE.md  TOOL-HIERARCHY.md  WORKSTATION-CAPABILITIES.md
docs/images/: README.md
examples/: demo_tools.py
scripts/: dbus-mcp-client.sh  dbus-mcp-server.sh  dbus-mcp-socat-wrapper.sh  dbus-mcp-socket-wrapper.sh  install-service.sh  uninstall-service.sh
src/dbus_mcp/: __init__.py  __main__.py  __main___fastmcp.py  dbus_manager.py  dbus_service.py  file_manager.py  security.py  server.py  server_fastmcp.py  socket_bridge.py  system_requirements.py  systemd_server.py
src/dbus_mcp/profiles/: __init__.py  base.py  detector.py  kde_arch.py  registry.py
src/dbus_mcp/tools/: __init__.py  registry.py  registry_fastmcp.py
src/dbus_mcp/tools/common/: screenshot.py
src/dbus_mcp/tools/system/: mcp_discovery.py  mcp_discovery_fastmcp.py
systemd/: dbus-mcp-screenshot.desktop
systemd/system/: dbus-mcp@.service
systemd/user/: dbus-mcp-standalone.service  dbus-mcp.service  dbus-mcp.socket  dbus-mcp@.service
